fix spacing

--- a/src/pages/about-page/about-page.module.scss
+++ b/src/pages/about-page/about-page.module.scss
@@ -5,12 +5,11 @@
     display: flex;
     flex-direction: row;
     background-color: $snow-white;
-    padding-top: 2em;
-    padding-bottom: 3em;
-    justify-content: center;
-    padding-right: 7em;
-    padding-left: 7em;
     column-gap: 5em;
+    justify-content: center;
+    align-content: center;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
 }
 
 .title {
@@ -25,8 +24,7 @@
 
 .text {
     text-align: start;
-    width: 50vw;
-    margin-top: 3em;
+    width: 40vw;
     display: flex;
     flex-direction: column;
     row-gap: 1em;
@@ -39,6 +37,6 @@
 
 .title {
     font: $extra-large-thin-title;
-    text-align: center;
+    text-align: start;
     letter-spacing: 0.4rem;
 }
